@@ -1,2 +1,6 @@
 - Become distro-agnostic (need hooks for other package managers)
 - survive "rm -rf /*"
+
+rollback.sh
+- switching back to the newest gen causes /boot to be empty
+- failed to find /arnix/generations/current in /proc/mounts
